examples/ingress_controller/ingress-resource.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: ex.dns.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: nginx-deployment
          servicePort: 80
